# region_finder_ru

./: README.md  pyproject.toml
src/region_finder_ru/: __init__.py  region_finder_ru.py
tests/: test_russian_regions.py
